[gd_scene load_steps=9 format=3 uid="uid://bwshwck4ejy70"]

[ext_resource type="StyleBox" uid="uid://csv14nt8iapkt" path="res://Styles/letter.tres" id="1_s6q0s"]
[ext_resource type="FontFile" uid="uid://ovdywd05xpyl" path="res://Assets/Fonts/CaveatBrush-Regular.ttf" id="2_110uf"]
[ext_resource type="Theme" uid="uid://ctgkegabwu8l1" path="res://Themes/menu.tres" id="3_mwvo2"]
[ext_resource type="Script" uid="uid://r8nt8avmbjtn" path="res://Scripts/modal_settings.gd" id="4_modal"]
[ext_resource type="StyleBox" uid="uid://tw3yg3cyx3qw" path="res://Styles/button.tres" id="5_mwvo2"]
[ext_resource type="Texture2D" uid="uid://4luytr6frvpf" path="res://Assets/Icons/check_unchecked.svg" id="6_check_off"]
[ext_resource type="Texture2D" uid="uid://crysehlg6w8kr" path="res://Assets/Icons/check_checked.svg" id="7_check_on"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ldgsr"]
bg_color = Color(0, 0, 0, 0.8117647)

[node name="ModalSettings" type="PanelContainer"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ldgsr")
script = ExtResource("4_modal")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2

[node name="Panel" type="Panel" parent="CenterContainer"]
custom_minimum_size = Vector2(700, 500)
layout_mode = 2
theme_override_styles/panel = ExtResource("1_s6q0s")

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 60

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="SettingsContainer" type="VBoxContainer" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_mwvo2")
theme_override_constants/separation = 16

[node name="CheckSound" type="CheckButton" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/SettingsContainer"]
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 32
theme_override_icons/checked = ExtResource("7_check_on")
theme_override_icons/unchecked = ExtResource("6_check_off")
text = "Přehrávat zvuk"

[node name="CheckAutostop" type="CheckButton" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/SettingsContainer"]
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 32
theme_override_icons/checked = ExtResource("7_check_on")
theme_override_icons/unchecked = ExtResource("6_check_off")
text = "Automatické zastavení"

[node name="CheckPoints" type="CheckButton" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/SettingsContainer"]
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 32
theme_override_icons/checked = ExtResource("7_check_on")
theme_override_icons/unchecked = ExtResource("6_check_off")
text = "Zobrazit body písmen"

[node name="CheckRound" type="CheckButton" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/SettingsContainer"]
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 32
theme_override_icons/checked = ExtResource("7_check_on")
theme_override_icons/unchecked = ExtResource("6_check_off")
text = "Povolit odpočet kola"

[node name="ButtonClose" type="Button" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_vertical = 8
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_110uf")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("5_mwvo2")
theme_override_styles/pressed = ExtResource("5_mwvo2")
theme_override_styles/hover = ExtResource("5_mwvo2")
text = "Zavřít"

[connection signal="toggled" from="CenterContainer/Panel/MarginContainer/VBoxContainer/SettingsContainer/CheckSound" to="." method="_on_check_sound_toggled"]
[connection signal="toggled" from="CenterContainer/Panel/MarginContainer/VBoxContainer/SettingsContainer/CheckAutostop" to="." method="_on_check_autostop_toggled"]
[connection signal="toggled" from="CenterContainer/Panel/MarginContainer/VBoxContainer/SettingsContainer/CheckPoints" to="." method="_on_check_points_toggled"]
[connection signal="toggled" from="CenterContainer/Panel/MarginContainer/VBoxContainer/SettingsContainer/CheckRound" to="." method="_on_check_round_toggled"]
[connection signal="pressed" from="CenterContainer/Panel/MarginContainer/VBoxContainer/ButtonClose" to="." method="_on_button_close_pressed"]
